--- a/Divar/Views/User/Login.cshtml
+++ b/Divar/Views/User/Login.cshtml
@@ -1,39 +1,22 @@
-﻿@model LoginViewModel
+﻿@model Divar.Models.LoginViewModel
 
-<link href="~/css/Login.css" rel="stylesheet" />
+<h2>ورود</h2>
 
 <form asp-action="Login" method="post">
-    <div>
-        <label>ایمیل</label>
-        <input asp-for="Email" type="email" />
-        <span asp-validation-for="Email"></span>
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-group">
+        <label asp-for="Email"></label>
+        <input asp-for="Email" class="form-control" />
+        <span asp-validation-for="Email" class="text-danger"></span>
     </div>
-    <div>
-        <label>رمز عبور</label>
-        <input asp-for="Password" type="password" />
-        <span asp-validation-for="Password"></span>
+    <div class="form-group">
+        <label asp-for="Password"></label>
+        <input asp-for="Password" class="form-control" />
+        <span asp-validation-for="Password" class="text-danger"></span>
     </div>
-    <div>
-        <input asp-for="RememberMe" type="checkbox" />
-        <label asp-for="RememberMe">مرا به خاطر بسپار</label>
+    <div class="form-group form-check">
+        <input asp-for="RememberMe" class="form-check-input" />
+        <label class="form-check-label" asp-for="RememberMe">مرا به خاطر بسپار</label>
     </div>
-    <button type="submit">ورود</button>
+    <button type="submit" class="btn btn-primary">ورود</button>
 </form>
-
-@if (!ViewData.ModelState.IsValid)
-{
-    <div style="text-align: center;">
-        @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
-        {
-            <p>@error.ErrorMessage</p>
-        }
-    </div>
-}
-
-<br />
-
-<b>
-    <h4 style="text-align: center;">
-        اکانت ندارید؟ <a asp-action="Register" asp-controller="User">ثبت‌نام</a>
-    </h4>
-</b>
