--- a/Divar/Views/User/Login.cshtml
+++ b/Divar/Views/User/Login.cshtml
@@ -20,3 +20,10 @@
     </div>
     <button type="submit" class="btn btn-primary">ورود</button>
 </form>
+
+
+<hr />
+
+<a asp-action ="Register" asp-controller="User">
+    register
+</a>
