--- a/Divar/Views/Roles/AssignRole.cshtml
+++ b/Divar/Views/Roles/AssignRole.cshtml
@@ -8,16 +8,14 @@
 
 <form asp-action="AssignRole" method="post">
     <div class="form-group">
-        <label asp-for="UserId">User ID</label>
-        <input asp-for="UserId" class="form-control" />
+        <label asp-for="UserId">User</label>
+        <select asp-for="UserId" class="form-control" asp-items="ViewBag.Users"></select>
         <span asp-validation-for="UserId" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="RoleName">Role Name</label>
-        <select asp-for="RoleName" class="form-control" asp-items="@(new SelectList(ViewBag.Roles, "Name", "Name"))">
-            <option value="">Select Role</option>
-        </select>
+        <label asp-for="RoleName">Role</label>
+        <select asp-for="RoleName" class="form-control" asp-items="ViewBag.Roles"></select>
         <span asp-validation-for="RoleName" class="text-danger"></span>
     </div>
 
