--- a/Divar/Views/Roles/List.cshtml
+++ b/Divar/Views/Roles/List.cshtml
@@ -27,4 +27,4 @@
 </table>
 
 <a asp-action="Create" class="btn btn-primary">ایجاد نقش جدید</a>
-<a asp-action="AssignRole" class="btn btn-primary">اختصاص نقش به کاربر</a>
+<a asp-action="ManageRole" class="btn btn-primary">اختصاص نقش به کاربر</a>
