--- a/Divar/Views/Roles/ManageRole.cshtml
+++ b/Divar/Views/Roles/ManageRole.cshtml
@@ -1,25 +1,27 @@
 ﻿@model Divar.ViewModel.ManageRoleViewModel
 
-<h3>Manage User Roles</h3>
+<h3>مدیریت نقش‌های کاربر</h3>
 
 <table class="table table-striped table-bordered">
     <tr>
-        <td>Name</td>
+        <td>نام</td>
         <td>@Model.CustomUserName</td>
     </tr>
 </table>
 <hr />
-<h3 class="text-bg-primary">User Roles</h3>
+<h3 class="text-bg-primary">نقش‌های کاربر</h3>
 <form asp-action="ManageRole" method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
     <input type="hidden" asp-for="CustomUserId" />
     @foreach (var item in Model.AllRoles)
     {
-        <input type="checkbox" name="Roles" checked="@Model.UserRoles.Contains(item.Name)" value="@item.Name">
-        <label>@item.Name</label>
+        <div>
+            <input type="checkbox" name="Roles" checked="@Model.UserRoles.Contains(item.Name)" value="@item.Name" />
+            <label>@item.Name</label>
+        </div>
     }
     <div class="py-2">
-        <button type="submit" class="btn btn-primary">Update Roles</button>
-        <a asp-action="List" class="btn btn-secondary">Return</a>
+        <button type="submit" class="btn btn-primary">بروزرسانی نقش‌ها</button>
+        <a asp-action="List" class="btn btn-secondary">بازگشت</a>
     </div>
 </form>
