--- a/Divar/Views/Roles/Edit.cshtml
+++ b/Divar/Views/Roles/Edit.cshtml
@@ -1,15 +1,33 @@
 ﻿@model Divar.ViewModel.EditRoleViewModel
 
-<h2>ویرایش نقش</h2>
+<h2 class="text-center">ویرایش نقش</h2>
 
-<form asp-action="Edit" method="post">
+<form asp-action="Edit" method="post" style="max-width: 400px; margin: auto;">
     <input type="hidden" asp-for="Id" />
-    <div class="form-group">
+    <div class="form-group text-center">
         <label for="Name">نام نقش</label>
-        <input type="text" asp-for="Name" class="form-control" />
+        <input type="text" asp-for="Name" class="form-control text-center" style="width: 100%; margin: auto;" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary">ذخیره</button>
+    <div class="text-center">
+        <button type="submit" class="btn btn-primary">ذخیره</button>
+        <a asp-action="List" class="btn btn-secondary">بازگشت به لیست نقش‌ها</a>
+    </div>
 </form>
 
-<a asp-action="List" class="btn btn-secondary">بازگشت به لیست نقش‌ها</a>
+<style>
+    .form-group {
+        text-align: center;
+    }
+    .form-control {
+        display: inline-block;
+        text-align: center;
+    }
+    label {
+        display: block;
+        margin-bottom: 5px;
+    }
+    button, a {
+        margin: 5px;
+    }
+</style>
