--- a/Divar/Views/Roles/List.cshtml
+++ b/Divar/Views/Roles/List.cshtml
@@ -1,30 +1,48 @@
 ﻿@model IEnumerable<IdentityRole>
 
-<h2>لیست نقش‌ها</h2>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>نام نقش</th>
-            <th>ویرایش</th>
-            <th>حذف</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var role in Model)
-        {
+<br />
+<br />
+<h1 class="text-center">لیست نقش‌ها</h1>
+<br />
+<br />
+<div class="table-responsive">
+    <table class="table table-bordered table-striped text-center" style="width: 50%; margin: auto;">
+        <thead class="thead-dark">
             <tr>
-                <td>@role.Name</td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@role.Id">ویرایش</a>
-                </td>
-                <td>
-                    <a asp-action="Delete" asp-route-id="@role.Id">حذف</a>
-                </td>
+                <th class="text-center">نام نقش</th>
+                <th class="text-center">ویرایش</th>
+                <th class="text-center">حذف</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var role in Model)
+            {
+                <tr>
+                    <td class="text-center">@role.Name</td>
+                    <td class="text-center">
+                        <a class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@role.Id">ویرایش</a>
+                    </td>
+                    <td class="text-center">
+                        <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@role.Id">حذف</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
 
-<a asp-action="Create" class="btn btn-primary">ایجاد نقش جدید</a>
-<a asp-action="ManageRole" class="btn btn-primary">اختصاص نقش به کاربر</a>
+<div class="d-flex justify-content-center my-3">
+    <a asp-action="Create" class="btn btn-primary mx-2">ایجاد نقش جدید</a>
+    <a asp-action="ManageRole" class="btn btn-secondary mx-2">اختصاص نقش به کاربر</a>
+</div>
+
+<style>
+    .table-bordered {
+        border: 2px solid black;
+    }
+
+        .table-bordered th, .table-bordered td {
+            border: 2px solid black;
+        }
+</style>
