--- a/Divar/Views/Roles/SelectUser.cshtml
+++ b/Divar/Views/Roles/SelectUser.cshtml
@@ -1,27 +1,40 @@
 ﻿@model IEnumerable<Divar.Models.CustomUser>
 
-<h2>Select a User to Manage Roles</h2>
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th>Select</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var user in Model)
-        {
+<hr />
+<h2 class="text-center">کاربر را برای اعطای نقش انتخاب کنید</h2>
+<hr />
+<div class="table-responsive" style="max-width: 800px; margin: auto;">
+    <table class="table table-bordered table-striped text-center">
+        <thead class="thead-dark">
             <tr>
-                <td>@user.FirstName</td>
-                <td>@user.LastName</td>
-                <td>@user.Email</td>
-                <td>
-                    <a asp-action="ManageRole" asp-route-id="@user.Id" class="btn btn-primary">Select</a>
-                </td>
+                <th class="text-center">نام</th>
+                <th class="text-center">نام خانوادگی</th>
+                <th class="text-center">ایمیل</th>
+                <th class="text-center">انتخاب کاربر</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var user in Model)
+            {
+                <tr>
+                    <td class="text-center">@user.FirstName</td>
+                    <td class="text-center">@user.LastName</td>
+                    <td class="text-center">@user.Email</td>
+                    <td class="text-center">
+                        <a asp-action="ManageRole" asp-route-id="@user.Id" class="btn btn-primary">Select</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+<style>
+    .table-bordered {
+        border: 2px solid black;
+    }
+    .table-bordered th, .table-bordered td {
+        border: 2px solid black;
+    }
+</style>
