--- a/Divar/Views/Admin/Index.cshtml
+++ b/Divar/Views/Admin/Index.cshtml
@@ -5,11 +5,9 @@
 }
 
 <link rel="stylesheet" href="~/css/admin.css">
-
-<h1 style="text-align: center;">لیست آگهی ها</h1>
-
+<br />
 <div style="text-align: center;">
-    <a asp-controller="Home" asp-action="Index">بازگشت به سایت</a>
+    <h1>   <a asp-controller="Home" asp-action="Index">بازگشت به سایت</a>  </h1>
 </div>
 
 <div style="text-align: center; margin-top: 20px;">
