--- a/Divar/Views/Roles/List.cshtml
+++ b/Divar/Views/Roles/List.cshtml
@@ -1,11 +1,12 @@
 ﻿@model IEnumerable<IdentityRole>
+<div style="text-align: center;">
+    <h4>   <a asp-action="Index" asp-controller="Admin" style="text-decoration: none;">بازگشت به پنل ادمین</a>  </h4>
+</div>
+<hr>
 
-
-<br />
 <br />
 <h1 class="text-center">لیست نقش‌ها</h1>
-<br />
-<br />
+
 <div class="table-responsive">
     <table class="table table-bordered table-striped text-center" style="width: 50%; margin: auto;">
         <thead class="thead-dark">
