--- a/Divar/Views/Roles/Edit.cshtml
+++ b/Divar/Views/Roles/Edit.cshtml
@@ -1,5 +1,11 @@
 ﻿@model Divar.ViewModel.EditRoleViewModel
 
+
+<div style="text-align: center;">
+    <h3>   <a asp-action="Index" asp-controller="Admin" style="text-decoration: none;">بازگشت به پنل ادمین</a>  </h3>
+</div>
+<hr />
+<br />
 <h2 class="text-center">ویرایش نقش</h2>
 
 <form asp-action="Edit" method="post" style="max-width: 400px; margin: auto;">
