--- a/Divar/Views/Roles/ManageRole.cshtml
+++ b/Divar/Views/Roles/ManageRole.cshtml
@@ -1,27 +1,45 @@
 ﻿@model Divar.ViewModel.ManageRoleViewModel
 
-<h3>مدیریت نقش‌های کاربر</h3>
 
-<table class="table table-striped table-bordered">
-    <tr>
-        <td>نام</td>
-        <td>@Model.CustomUserName</td>
-    </tr>
-</table>
+<div style="text-align: center;">
+    <h3>   <a asp-action="Index" asp-controller="Admin" style="text-decoration: none;">بازگشت به پنل ادمین</a>  </h3>
+</div>
 <hr />
-<h3 class="text-bg-primary">نقش‌های کاربر</h3>
-<form asp-action="ManageRole" method="post">
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <input type="hidden" asp-for="CustomUserId" />
-    @foreach (var item in Model.AllRoles)
-    {
-        <div>
-            <input type="checkbox" name="Roles" checked="@Model.UserRoles.Contains(item.Name)" value="@item.Name" />
-            <label>@item.Name</label>
-        </div>
-    }
-    <div class="py-2">
-        <button type="submit" class="btn btn-primary">بروزرسانی نقش‌ها</button>
-        <a asp-action="List" class="btn btn-secondary">بازگشت</a>
+
+<br />
+<div class="text-center">
+    <h3>مدیریت نقش‌های کاربر</h3>
+
+    <div class="table-responsive" style="max-width: 600px; margin: auto;">
+        <table class="table table-striped table-bordered text-center">
+            <tr>
+                <th class="text-center">نام</th>
+                <th class="text-center">نام خانوادگی</th>
+                <th class="text-center">ایمیل</th>
+            </tr>
+            <tr>
+                <td class="text-center">@Model.FirstName</td>
+                <td class="text-center">@Model.LastName</td>
+                <td class="text-center">@Model.Email</td>
+            </tr>
+
+        </table>
     </div>
-</form>
+    <hr />
+    <h3 class="text-bg-primary">نقش‌های کاربر</h3>
+    <form asp-action="ManageRole" method="post" class="text-center">
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <input type="hidden" asp-for="CustomUserId" />
+        @foreach (var item in Model.AllRoles)
+        {
+            <div>
+                <input type="checkbox" name="Roles" checked="@Model.UserRoles.Contains(item.Name)" value="@item.Name" />
+                <label>@item.Name</label>
+            </div>
+        }
+        <div class="py-2">
+            <button type="submit" class="btn btn-primary">بروزرسانی نقش‌ها</button>
+            <a asp-action="List" class="btn btn-secondary">بازگشت</a>
+        </div>
+    </form>
+</div>
